            - In the class 'StatisticsBrick', the attribute 'statistics_registry'
              has been renamed "statistic_registry".
            - The class 'JobBrick' has been removed (see 'creme_core.views.job.JobInfoBrick' instead).
        # In the class 'creme_core.core.entity_cell.EntityCellActions' the constructor argument
          'actions_registry' has been renamed "action_registry".
        # In the class 'creme_core.forms.fields.EntityCredsJSONField', the attribute
          'quickforms_registry' has been renamed "quickform_registry".
        # In 'creme_core.gui' :
            - The method 'button_menu.Button.ok_4_display()' has been replaced by the method 'is_displayed()'.
            - The method 'bricks.Brick._render()' uses now the "template_name" found in the passed
              argument 'template_context', and not the attribute "template_name" directly anymore.
              The attribute is now injected in this context by '_build_template_context()', & so you don't have
              to change your code, excepted if you override 'self.template_name' after building the context.
            - The module 'last_viewed' has been removed.
        # The class 'creme_core.menu.RecentEntitiesEntry' has been replaced by 'QuickAccessEntry'.
        # In 'creme_core.views' :
            - The method 'creme_core.views.generic.base.BricksMixin.get_bricks()' now returns
              a dictionary instead of a list (to group Bricks per zone).
              All inheriting views have been modified, & their related templates too
              (typically "{% brick_declare bricks %}" became "{% brick_declare bricks.main %}").
              Notice that reloading views still use a list (because zones have no meaning in reloading context).
            - In the class 'generic.listview.EntitiesList':
                - the attribute 'actions_registry' has been renamed "action_registry".